--- a/contact/index.html
+++ b/contact/index.html
@@ -21,22 +21,22 @@
             <nav>
                 <ul role="list">
                         <li>
-                            <a href="/" class="">
+                            <a href="/daedalus-s-blog/" class="">
                                 Home
                             </a>
                         </li>
                         <li>
-                            <a href="/about/" class="">
+                            <a href="/daedalus-s-blog/about/" class="">
                                 About
                             </a>
                         </li>
                         <li>
-                            <a href="/contact/" class="current">
+                            <a href="/daedalus-s-blog/contact/" class="current">
                                 Contact
                             </a>
                         </li>
                         <li>
-                            <a href="/cv/" class="">
+                            <a href="/daedalus-s-blog/cv/" class="">
                                 Cv
                             </a>
                         </li>
@@ -47,7 +47,7 @@
     <h1>Contact</h1>
     <p>You can reach me through the following platforms:</p>
 <ul>
-<li>Email: <a href="mailto:&#100;&#101;&#100;&#97;&#x6c;&#x65;&#64;&#103;&#x6d;&#97;&#x69;&#x6c;&#x2e;&#99;&#111;&#109;">&#100;&#101;&#100;&#97;&#x6c;&#x65;&#64;&#103;&#x6d;&#97;&#x69;&#x6c;&#x2e;&#99;&#111;&#109;</a></li>
+<li>Email: <a href="mailto:&#x64;&#x65;&#x64;&#x61;&#108;&#101;&#64;&#103;&#109;&#97;&#x69;&#x6c;&#x2e;&#99;&#x6f;&#109;">&#x64;&#x65;&#x64;&#x61;&#108;&#101;&#64;&#103;&#109;&#97;&#x69;&#x6c;&#x2e;&#99;&#x6f;&#109;</a></li>
 <li>Twitter: @dedale</li>
 <li>Instagram: @dedale_inventions</li>
 <li>LinkedIn: linkedin.com/in/dedale</li>
