--- a/about/index.html
+++ b/about/index.html
@@ -21,22 +21,22 @@
             <nav>
                 <ul role="list">
                         <li>
-                            <a href="/" class="">
+                            <a href="/daedalus-s-blog/" class="">
                                 Home
                             </a>
                         </li>
                         <li>
-                            <a href="/about/" class="current">
+                            <a href="/daedalus-s-blog/about/" class="current">
                                 About
                             </a>
                         </li>
                         <li>
-                            <a href="/contact/" class="">
+                            <a href="/daedalus-s-blog/contact/" class="">
                                 Contact
                             </a>
                         </li>
                         <li>
-                            <a href="/cv/" class="">
+                            <a href="/daedalus-s-blog/cv/" class="">
                                 Cv
                             </a>
                         </li>
