--- a/index.html
+++ b/index.html
@@ -21,22 +21,22 @@
             <nav>
                 <ul role="list">
                         <li>
-                            <a href="/" class="current">
+                            <a href="/daedalus-s-blog/" class="current">
                                 Home
                             </a>
                         </li>
                         <li>
-                            <a href="/about/" class="">
+                            <a href="/daedalus-s-blog/about/" class="">
                                 About
                             </a>
                         </li>
                         <li>
-                            <a href="/contact/" class="">
+                            <a href="/daedalus-s-blog/contact/" class="">
                                 Contact
                             </a>
                         </li>
                         <li>
-                            <a href="/cv/" class="">
+                            <a href="/daedalus-s-blog/cv/" class="">
                                 Cv
                             </a>
                         </li>
@@ -46,7 +46,7 @@
         <main class="page-home"> 
 
         <article class="card">
-                <a href="/blog/1/">
+                <a href="/daedalus-s-blog/blog/1/">
                         <h3>
                             Life in Athens
                         </h3>
@@ -60,7 +60,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/blog/2/">
+                <a href="/daedalus-s-blog/blog/2/">
                         <h3>
                             The Progress of My Nephew, Talos
                         </h3>
@@ -74,7 +74,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/blog/3/">
+                <a href="/daedalus-s-blog/blog/3/">
                         <h3>
                             The Tragedy of Talos
                         </h3>
@@ -88,7 +88,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/blog/4/">
+                <a href="/daedalus-s-blog/blog/4/">
                         <h3>
                             Exile from Athens
                         </h3>
@@ -102,7 +102,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/blog/5/">
+                <a href="/daedalus-s-blog/blog/5/">
                         <h3>
                             A New Home in Crete
                         </h3>
@@ -116,7 +116,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/blog/6/">
+                <a href="/daedalus-s-blog/blog/6/">
                         <h3>
                             The Unforeseen Consequences
                         </h3>
@@ -130,7 +130,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/blog/7/">
+                <a href="/daedalus-s-blog/blog/7/">
                         <h3>
                             The Price of Hubris
                         </h3>
@@ -144,7 +144,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/blog/8/">
+                <a href="/daedalus-s-blog/blog/8/">
                         <h3>
                             A Strange Request
                         </h3>
@@ -158,7 +158,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/blog/9/">
+                <a href="/daedalus-s-blog/blog/9/">
                         <h3>
                             The Birth of the Minotaur
                         </h3>
@@ -172,7 +172,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/blog/10/">
+                <a href="/daedalus-s-blog/blog/10/">
                         <h3>
                             A Request from the King
                         </h3>
@@ -186,7 +186,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/blog/11/">
+                <a href="/daedalus-s-blog/blog/11/">
                         <h3>
                             The Tragic Loss of Androgeus
                         </h3>
@@ -200,7 +200,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/blog/12/">
+                <a href="/daedalus-s-blog/blog/12/">
                         <h3>
                             The Siege of Athens
                         </h3>
@@ -214,7 +214,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/blog/13/">
+                <a href="/daedalus-s-blog/blog/13/">
                         <h3>
                             The Tale of Theseus and Ariadne
                         </h3>
@@ -228,7 +228,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/blog/14/">
+                <a href="/daedalus-s-blog/blog/14/">
                         <h3>
                             The Fall of the Minotaur
                         </h3>
@@ -242,7 +242,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/blog/15/">
+                <a href="/daedalus-s-blog/blog/15/">
                         <h3>
                             Life in the Labyrinth
                         </h3>
@@ -256,7 +256,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/blog/16/">
+                <a href="/daedalus-s-blog/blog/16/">
                         <h3>
                             The Eve of Escape
                         </h3>
@@ -270,7 +270,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/blog/17/">
+                <a href="/daedalus-s-blog/blog/17/">
                         <h3>
                             The Accident
                         </h3>
@@ -284,7 +284,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/blog/18/">
+                <a href="/daedalus-s-blog/blog/18/">
                         <h3>
                             A New Life in Sicily
                         </h3>
@@ -298,7 +298,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/blog/19/">
+                <a href="/daedalus-s-blog/blog/19/">
                         <h3>
                             The Snail Shell Challenge
                         </h3>
@@ -312,7 +312,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/blog/20/">
+                <a href="/daedalus-s-blog/blog/20/">
                         <h3>
                             The End of Minos
                         </h3>
