--- a/contact/index.html
+++ b/contact/index.html
@@ -17,7 +17,7 @@
     </head>
     <body>
         <header>
-            <a href="/" class="siteTitle">Daedalus&#x27;s Blog</a>
+            <a href="/daedalus-s-blog/" class="siteTitle">Daedalus&#x27;s Blog</a>
             <nav>
                 <ul role="list">
                         <li>
@@ -47,7 +47,7 @@
     <h1>Contact</h1>
     <p>You can reach me through the following platforms:</p>
 <ul>
-<li>Email: <a href="mailto:&#x64;&#x65;&#100;&#x61;&#108;&#101;&#x40;&#103;&#109;&#x61;&#105;&#x6c;&#x2e;&#99;&#111;&#109;">&#x64;&#x65;&#100;&#x61;&#108;&#101;&#x40;&#103;&#109;&#x61;&#105;&#x6c;&#x2e;&#99;&#111;&#109;</a></li>
+<li>Email: <a href="mailto:&#100;&#101;&#100;&#x61;&#x6c;&#101;&#64;&#x67;&#109;&#x61;&#x69;&#x6c;&#46;&#x63;&#111;&#109;">&#100;&#101;&#100;&#x61;&#x6c;&#101;&#64;&#x67;&#109;&#x61;&#x69;&#x6c;&#46;&#x63;&#111;&#109;</a></li>
 <li>Twitter: @dedale</li>
 <li>Instagram: @dedale_inventions</li>
 <li>LinkedIn: linkedin.com/in/dedale</li>
