--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                             As a renowned inventor and engineer in ancient Athens, my days are filled with a wide variety of occ...
                         </p>
                         <div class="metadata">
-                            <span>0.8 Minutes</span>
+                            <span>48 Seconds</span>
                             <time>-400 BCE</time>
                         </div>
                     </a>
@@ -68,7 +68,7 @@
                             I am proud to report that my nephew, Talos, is making great progress in his studies and training as ...
                         </p>
                         <div class="metadata">
-                            <span>0.8 Minutes</span>
+                            <span>46 Seconds</span>
                             <time>-396 BCE</time>
                         </div>
                     </a>
@@ -82,7 +82,7 @@
                             It is with a heavy heart that I write this entry. As many of you know, my dear nephew Talos has been...
                         </p>
                         <div class="metadata">
-                            <span>1.2 Minutes</span>
+                            <span>73 Seconds</span>
                             <time>-396 BCE</time>
                         </div>
                     </a>
@@ -96,7 +96,7 @@
                             As I sit down to write this entry, I am filled with a sense of sadness and nostalgia. After spending...
                         </p>
                         <div class="metadata">
-                            <span>1 Minutes</span>
+                            <span>59 Seconds</span>
                             <time>-394 BCE</time>
                         </div>
                     </a>
@@ -110,7 +110,7 @@
                             After my exile from Athens, I have found myself in a new land: the island of Crete. It is a beautifu...
                         </p>
                         <div class="metadata">
-                            <span>0.7 Minutes</span>
+                            <span>40 Seconds</span>
                             <time>-392 BCE</time>
                         </div>
                     </a>
@@ -124,7 +124,7 @@
                             As I continue to settle into my new home in Crete, I have been closely following the events of the k...
                         </p>
                         <div class="metadata">
-                            <span>0.7 Minutes</span>
+                            <span>41 Seconds</span>
                             <time>-390 BCE</time>
                         </div>
                     </a>
@@ -138,7 +138,7 @@
                             It is with a heavy heart that I write this entry. It seems that my fears about the consequences of K...
                         </p>
                         <div class="metadata">
-                            <span>0.8 Minutes</span>
+                            <span>50 Seconds</span>
                             <time>-389 BCE</time>
                         </div>
                     </a>
@@ -152,7 +152,7 @@
                             It seems that the scandal and turmoil that I feared would result from Queen Pasiphae&#x27;s obsession wit...
                         </p>
                         <div class="metadata">
-                            <span>0.7 Minutes</span>
+                            <span>39 Seconds</span>
                             <time>-387 BCE</time>
                         </div>
                     </a>
@@ -166,7 +166,7 @@
                             It is with a heavy heart that I write this entry. The consequences of Queen Pasiphae&#x27;s actions have ...
                         </p>
                         <div class="metadata">
-                            <span>0.7 Minutes</span>
+                            <span>43 Seconds</span>
                             <time>-386 BCE</time>
                         </div>
                     </a>
@@ -180,7 +180,7 @@
                             It has been a tumultuous time for the kingdom of Crete since the birth of the Minotaur. The creature...
                         </p>
                         <div class="metadata">
-                            <span>0.8 Minutes</span>
+                            <span>48 Seconds</span>
                             <time>-385 BCE</time>
                         </div>
                     </a>
@@ -194,7 +194,7 @@
                             It is with great sadness that I write this entry. Today, we learned of the tragic death of Androgeus...
                         </p>
                         <div class="metadata">
-                            <span>0.5 Minutes</span>
+                            <span>30 Seconds</span>
                             <time>-384 BCE</time>
                         </div>
                     </a>
@@ -208,7 +208,7 @@
                             The kingdom of Crete is in a state of unrest and turmoil. In the wake of the death of Androgeus, Kin...
                         </p>
                         <div class="metadata">
-                            <span>0.8 Minutes</span>
+                            <span>47 Seconds</span>
                             <time>-383 BCE</time>
                         </div>
                     </a>
@@ -222,7 +222,7 @@
                             It has been a year since the siege of Athens began, and the conflict shows no signs of abating. In t...
                         </p>
                         <div class="metadata">
-                            <span>0.9 Minutes</span>
+                            <span>53 Seconds</span>
                             <time>-382 BCE</time>
                         </div>
                     </a>
@@ -236,7 +236,7 @@
                             The news of Theseus&#x27;s success in defeating the Minotaur has spread like wildfire throughout the king...
                         </p>
                         <div class="metadata">
-                            <span>0.9 Minutes</span>
+                            <span>56 Seconds</span>
                             <time>-381 BCE</time>
                         </div>
                     </a>
@@ -250,7 +250,7 @@
                             It has been a year since I was imprisoned in the labyrinth along with my son, Icarus. Life here has ...
                         </p>
                         <div class="metadata">
-                            <span>1.2 Minutes</span>
+                            <span>70 Seconds</span>
                             <time>-380 BCE</time>
                         </div>
                     </a>
@@ -264,7 +264,7 @@
                             It is the eve of the day we have planned to escape from the labyrinth. After months of preparation a...
                         </p>
                         <div class="metadata">
-                            <span>0.7 Minutes</span>
+                            <span>44 Seconds</span>
                             <time>-379 BCE</time>
                         </div>
                     </a>
@@ -278,7 +278,7 @@
                             It has been a few months since our escape from the labyrinth, and I am still trying to come to terms...
                         </p>
                         <div class="metadata">
-                            <span>1.1 Minutes</span>
+                            <span>65 Seconds</span>
                             <time>-377 BCE</time>
                         </div>
                     </a>
@@ -292,7 +292,7 @@
                             I have found refuge in Sicily, at the court of King Cocalos. It is a new and unfamiliar place, but I...
                         </p>
                         <div class="metadata">
-                            <span>0.9 Minutes</span>
+                            <span>53 Seconds</span>
                             <time>-376 BCE</time>
                         </div>
                     </a>
@@ -306,7 +306,7 @@
                             I have heard of a challenge that was recently issued: to succeed in attaching a thread to the bottom...
                         </p>
                         <div class="metadata">
-                            <span>0.7 Minutes</span>
+                            <span>40 Seconds</span>
                             <time>-375 BCE</time>
                         </div>
                     </a>
@@ -320,7 +320,7 @@
                             I have been aware of Cocalos&#x27; plan for a few days now. He invited Minos to his palace and offered hi...
                         </p>
                         <div class="metadata">
-                            <span>0.5 Minutes</span>
+                            <span>31 Seconds</span>
                             <time>-374 BCE</time>
                         </div>
                     </a>
