--- a/contact/index.html
+++ b/contact/index.html
@@ -13,7 +13,7 @@
             name="keywords"
             content="Daedalus, Athens, minotaur, labyrinth, Theseus, Ariadne, inventor, sculptor, architect, Ancient Greece">
       <script type="module" crossorigin src="/daedalus-s-blog/assets/style-fac82e35.js"></script>
-      <link rel="stylesheet" href="/daedalus-s-blog/assets/style-fbc06fb3.css">
+      <link rel="stylesheet" href="/daedalus-s-blog/assets/style-d4284c73.css">
     </head>
     <body>
         <header>
@@ -47,7 +47,7 @@
     <h1>Contact</h1>
     <p>You can reach me through the following platforms:</p>
 <ul>
-<li>Email: <a href="mailto:&#x64;&#101;&#100;&#x61;&#108;&#101;&#64;&#103;&#109;&#x61;&#105;&#108;&#x2e;&#99;&#x6f;&#x6d;">&#x64;&#101;&#100;&#x61;&#108;&#101;&#64;&#103;&#109;&#x61;&#105;&#108;&#x2e;&#99;&#x6f;&#x6d;</a></li>
+<li>Email: <a href="mailto:&#x64;&#x65;&#x64;&#x61;&#108;&#101;&#x40;&#x67;&#109;&#x61;&#105;&#108;&#46;&#x63;&#x6f;&#x6d;">&#x64;&#x65;&#x64;&#x61;&#108;&#101;&#x40;&#x67;&#109;&#x61;&#105;&#108;&#46;&#x63;&#x6f;&#x6d;</a></li>
 <li>Twitter: @dedale</li>
 <li>Instagram: @dedale_inventions</li>
 <li>LinkedIn: linkedin.com/in/dedale</li>
