--- a/contact/index.html
+++ b/contact/index.html
@@ -47,7 +47,7 @@
     <h1>Contact</h1>
     <p>You can reach me through the following platforms:</p>
 <ul>
-<li>Email: <a href="mailto:&#x64;&#x65;&#x64;&#x61;&#108;&#101;&#x40;&#x67;&#109;&#x61;&#105;&#108;&#46;&#x63;&#x6f;&#x6d;">&#x64;&#x65;&#x64;&#x61;&#108;&#101;&#x40;&#x67;&#109;&#x61;&#105;&#108;&#46;&#x63;&#x6f;&#x6d;</a></li>
+<li>Email: <a href="mailto:&#x64;&#x65;&#x64;&#97;&#108;&#101;&#x40;&#103;&#109;&#97;&#x69;&#x6c;&#46;&#x63;&#111;&#109;">&#x64;&#x65;&#x64;&#97;&#108;&#101;&#x40;&#103;&#109;&#97;&#x69;&#x6c;&#46;&#x63;&#111;&#109;</a></li>
 <li>Twitter: @dedale</li>
 <li>Instagram: @dedale_inventions</li>
 <li>LinkedIn: linkedin.com/in/dedale</li>
