--- a/contact/index.html
+++ b/contact/index.html
@@ -13,30 +13,29 @@
             name="keywords"
             content="Daedalus, Athens, minotaur, labyrinth, Theseus, Ariadne, inventor, sculptor, architect, Ancient Greece">
       <script type="module" crossorigin src="/daedalus-s-blog/assets/style-fac82e35.js"></script>
-      <link rel="stylesheet" href="/daedalus-s-blog/assets/style-d4284c73.css">
+      <link rel="stylesheet" href="/daedalus-s-blog/assets/style-6e6da3c9.css">
     </head>
     <body>
         <header>
             <a href="/daedalus-s-blog/" class="siteTitle">Daedalus&#x27;s Blog</a>
-            <nav>
-                <ul role="list">
-                        <li>
-                            <a href="/daedalus-s-blog/" class="">
-                                Home
+            <nav>                <ul role="list" style="--n-items:4; --current-item:2">
+                        <li class="nav_item">
+                            <a href="/daedalus-s-blog/" class="nav_link ">
+                                Blog
                             </a>
                         </li>
-                        <li>
-                            <a href="/daedalus-s-blog/about/" class="">
+                        <li class="nav_item">
+                            <a href="/daedalus-s-blog/about/" class="nav_link ">
                                 About
                             </a>
                         </li>
-                        <li>
-                            <a href="/daedalus-s-blog/contact/" class="current">
+                        <li class="nav_item">
+                            <a href="/daedalus-s-blog/contact/" class="nav_link current">
                                 Contact
                             </a>
                         </li>
-                        <li>
-                            <a href="/daedalus-s-blog/cv/" class="">
+                        <li class="nav_item">
+                            <a href="/daedalus-s-blog/cv/" class="nav_link ">
                                 Cv
                             </a>
                         </li>
@@ -47,7 +46,7 @@
     <h1>Contact</h1>
     <p>You can reach me through the following platforms:</p>
 <ul>
-<li>Email: <a href="mailto:&#x64;&#x65;&#x64;&#97;&#108;&#101;&#x40;&#103;&#109;&#97;&#x69;&#x6c;&#46;&#x63;&#111;&#109;">&#x64;&#x65;&#x64;&#97;&#108;&#101;&#x40;&#103;&#109;&#97;&#x69;&#x6c;&#46;&#x63;&#111;&#109;</a></li>
+<li>Email: <a href="mailto:&#x64;&#x65;&#100;&#x61;&#108;&#x65;&#x40;&#x67;&#x6d;&#97;&#105;&#108;&#x2e;&#x63;&#x6f;&#x6d;">&#x64;&#x65;&#100;&#x61;&#108;&#x65;&#x40;&#x67;&#x6d;&#97;&#105;&#108;&#x2e;&#x63;&#x6f;&#x6d;</a></li>
 <li>Twitter: @dedale</li>
 <li>Instagram: @dedale_inventions</li>
 <li>LinkedIn: linkedin.com/in/dedale</li>
