--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Daedalus&#x27;s Blog | home</title>
+        <title>Daedalus&#x27;s Blog | blog</title>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,40 +13,39 @@
             name="keywords"
             content="Daedalus, Athens, minotaur, labyrinth, Theseus, Ariadne, inventor, sculptor, architect, Ancient Greece">
       <script type="module" crossorigin src="/daedalus-s-blog/assets/style-fac82e35.js"></script>
-      <link rel="stylesheet" href="/daedalus-s-blog/assets/style-d4284c73.css">
+      <link rel="stylesheet" href="/daedalus-s-blog/assets/style-6e6da3c9.css">
     </head>
     <body>
         <header>
             <a href="/daedalus-s-blog/" class="siteTitle">Daedalus&#x27;s Blog</a>
-            <nav>
-                <ul role="list">
-                        <li>
-                            <a href="/daedalus-s-blog/" class="current">
-                                Home
+            <nav>                <ul role="list" style="--n-items:4; --current-item:0">
+                        <li class="nav_item">
+                            <a href="/daedalus-s-blog/" class="nav_link current">
+                                Blog
                             </a>
                         </li>
-                        <li>
-                            <a href="/daedalus-s-blog/about/" class="">
+                        <li class="nav_item">
+                            <a href="/daedalus-s-blog/about/" class="nav_link ">
                                 About
                             </a>
                         </li>
-                        <li>
-                            <a href="/daedalus-s-blog/contact/" class="">
+                        <li class="nav_item">
+                            <a href="/daedalus-s-blog/contact/" class="nav_link ">
                                 Contact
                             </a>
                         </li>
-                        <li>
-                            <a href="/daedalus-s-blog/cv/" class="">
+                        <li class="nav_item">
+                            <a href="/daedalus-s-blog/cv/" class="nav_link ">
                                 Cv
                             </a>
                         </li>
                 </ul>
             </nav>
         </header>
-        <main class="page-home"> 
+        <main class="page-blog"> 
 
         <article class="card">
-                <a href="/daedalus-s-blog/blog/1/">
+                <a href="/daedalus-s-blog/blog/1/" class="article-card">
                         <h3>
                             Life in Athens
                         </h3>
@@ -54,13 +53,13 @@
                             As a renowned inventor and engineer in ancient Athens, my days are filled with a wide variety of occ...
                         </p>
                         <div class="metadata">
-                            <span>48 Seconds</span>
+                            <span>36 Seconds</span>
                             <time>-400 BCE</time>
                         </div>
                     </a>
             </article>
         <article class="card">
-                <a href="/daedalus-s-blog/blog/2/">
+                <a href="/daedalus-s-blog/blog/2/" class="article-card">
                         <h3>
                             The Progress of My Nephew, Talos
                         </h3>
@@ -74,7 +73,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/daedalus-s-blog/blog/3/">
+                <a href="/daedalus-s-blog/blog/3/" class="article-card">
                         <h3>
                             The Tragedy of Talos
                         </h3>
@@ -88,7 +87,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/daedalus-s-blog/blog/4/">
+                <a href="/daedalus-s-blog/blog/4/" class="article-card">
                         <h3>
                             Exile from Athens
                         </h3>
@@ -102,7 +101,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/daedalus-s-blog/blog/5/">
+                <a href="/daedalus-s-blog/blog/5/" class="article-card">
                         <h3>
                             A New Home in Crete
                         </h3>
@@ -116,7 +115,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/daedalus-s-blog/blog/6/">
+                <a href="/daedalus-s-blog/blog/6/" class="article-card">
                         <h3>
                             The Unforeseen Consequences
                         </h3>
@@ -130,7 +129,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/daedalus-s-blog/blog/7/">
+                <a href="/daedalus-s-blog/blog/7/" class="article-card">
                         <h3>
                             The Price of Hubris
                         </h3>
@@ -144,7 +143,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/daedalus-s-blog/blog/8/">
+                <a href="/daedalus-s-blog/blog/8/" class="article-card">
                         <h3>
                             A Strange Request
                         </h3>
@@ -158,7 +157,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/daedalus-s-blog/blog/9/">
+                <a href="/daedalus-s-blog/blog/9/" class="article-card">
                         <h3>
                             The Birth of the Minotaur
                         </h3>
@@ -172,7 +171,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/daedalus-s-blog/blog/10/">
+                <a href="/daedalus-s-blog/blog/10/" class="article-card">
                         <h3>
                             A Request from the King
                         </h3>
@@ -186,7 +185,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/daedalus-s-blog/blog/11/">
+                <a href="/daedalus-s-blog/blog/11/" class="article-card">
                         <h3>
                             The Tragic Loss of Androgeus
                         </h3>
@@ -200,7 +199,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/daedalus-s-blog/blog/12/">
+                <a href="/daedalus-s-blog/blog/12/" class="article-card">
                         <h3>
                             The Siege of Athens
                         </h3>
@@ -214,7 +213,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/daedalus-s-blog/blog/13/">
+                <a href="/daedalus-s-blog/blog/13/" class="article-card">
                         <h3>
                             The Tale of Theseus and Ariadne
                         </h3>
@@ -228,7 +227,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/daedalus-s-blog/blog/14/">
+                <a href="/daedalus-s-blog/blog/14/" class="article-card">
                         <h3>
                             The Fall of the Minotaur
                         </h3>
@@ -242,7 +241,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/daedalus-s-blog/blog/15/">
+                <a href="/daedalus-s-blog/blog/15/" class="article-card">
                         <h3>
                             Life in the Labyrinth
                         </h3>
@@ -256,7 +255,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/daedalus-s-blog/blog/16/">
+                <a href="/daedalus-s-blog/blog/16/" class="article-card">
                         <h3>
                             The Eve of Escape
                         </h3>
@@ -270,7 +269,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/daedalus-s-blog/blog/17/">
+                <a href="/daedalus-s-blog/blog/17/" class="article-card">
                         <h3>
                             The Accident
                         </h3>
@@ -284,7 +283,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/daedalus-s-blog/blog/18/">
+                <a href="/daedalus-s-blog/blog/18/" class="article-card">
                         <h3>
                             A New Life in Sicily
                         </h3>
@@ -298,7 +297,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/daedalus-s-blog/blog/19/">
+                <a href="/daedalus-s-blog/blog/19/" class="article-card">
                         <h3>
                             The Snail Shell Challenge
                         </h3>
@@ -312,7 +311,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/daedalus-s-blog/blog/20/">
+                <a href="/daedalus-s-blog/blog/20/" class="article-card">
                         <h3>
                             The End of Minos
                         </h3>
