--- a/contact/index.html
+++ b/contact/index.html
@@ -13,7 +13,7 @@
             name="keywords"
             content="Daedalus, Athens, minotaur, labyrinth, Theseus, Ariadne, inventor, sculptor, architect, Ancient Greece">
       <script type="module" crossorigin src="/daedalus-s-blog/assets/style-fac82e35.js"></script>
-      <link rel="stylesheet" href="/daedalus-s-blog/assets/style-6e6da3c9.css">
+      <link rel="stylesheet" href="/daedalus-s-blog/assets/style-f2d3db91.css">
     </head>
     <body>
         <header>
@@ -21,7 +21,7 @@
             <nav>                <ul role="list" style="--n-items:4; --current-item:2">
                         <li class="nav_item">
                             <a href="/daedalus-s-blog/" class="nav_link ">
-                                Blog
+                                Articles
                             </a>
                         </li>
                         <li class="nav_item">
@@ -46,7 +46,7 @@
     <h1>Contact</h1>
     <p>You can reach me through the following platforms:</p>
 <ul>
-<li>Email: <a href="mailto:&#x64;&#101;&#100;&#x61;&#108;&#101;&#64;&#x67;&#x6d;&#x61;&#105;&#x6c;&#46;&#x63;&#111;&#x6d;">&#x64;&#101;&#100;&#x61;&#108;&#101;&#64;&#x67;&#x6d;&#x61;&#105;&#x6c;&#46;&#x63;&#111;&#x6d;</a></li>
+<li>Email: <a href="mailto:&#x64;&#101;&#x64;&#x61;&#108;&#x65;&#64;&#x67;&#x6d;&#97;&#105;&#108;&#46;&#x63;&#111;&#x6d;">&#x64;&#101;&#x64;&#x61;&#108;&#x65;&#64;&#x67;&#x6d;&#97;&#105;&#108;&#46;&#x63;&#111;&#x6d;</a></li>
 <li>Twitter: @dedale</li>
 <li>Instagram: @dedale_inventions</li>
 <li>LinkedIn: linkedin.com/in/dedale</li>
