--- a/cv/index.html
+++ b/cv/index.html
@@ -13,7 +13,7 @@
             name="keywords"
             content="Daedalus, Athens, minotaur, labyrinth, Theseus, Ariadne, inventor, sculptor, architect, Ancient Greece">
       <script type="module" crossorigin src="/daedalus-s-blog/assets/style-fac82e35.js"></script>
-      <link rel="stylesheet" href="/daedalus-s-blog/assets/style-6e6da3c9.css">
+      <link rel="stylesheet" href="/daedalus-s-blog/assets/style-f2d3db91.css">
     </head>
     <body>
         <header>
@@ -21,7 +21,7 @@
             <nav>                <ul role="list" style="--n-items:4; --current-item:3">
                         <li class="nav_item">
                             <a href="/daedalus-s-blog/" class="nav_link ">
-                                Blog
+                                Articles
                             </a>
                         </li>
                         <li class="nav_item">
