--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Daedalus&#x27;s Blog | blog</title>
+        <title>Daedalus&#x27;s Blog | articles</title>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +13,7 @@
             name="keywords"
             content="Daedalus, Athens, minotaur, labyrinth, Theseus, Ariadne, inventor, sculptor, architect, Ancient Greece">
       <script type="module" crossorigin src="/daedalus-s-blog/assets/style-fac82e35.js"></script>
-      <link rel="stylesheet" href="/daedalus-s-blog/assets/style-6e6da3c9.css">
+      <link rel="stylesheet" href="/daedalus-s-blog/assets/style-f2d3db91.css">
     </head>
     <body>
         <header>
@@ -21,7 +21,7 @@
             <nav>                <ul role="list" style="--n-items:4; --current-item:0">
                         <li class="nav_item">
                             <a href="/daedalus-s-blog/" class="nav_link current">
-                                Blog
+                                Articles
                             </a>
                         </li>
                         <li class="nav_item">
@@ -42,7 +42,7 @@
                 </ul>
             </nav>
         </header>
-        <main class="page-blog"> 
+        <main class="page-articles"> 
 
         <article class="card">
                 <a href="/daedalus-s-blog/blog/1/" class="article-card">
