--- a/index.html
+++ b/index.html
@@ -12,30 +12,30 @@
         <meta
             name="keywords"
             content="Daedalus, Athens, minotaur, labyrinth, Theseus, Ariadne, inventor, sculptor, architect, Ancient Greece">
-      <script type="module" crossorigin src="/daedalus-s-blog/assets/style-fac82e35.js"></script>
-      <link rel="stylesheet" href="/daedalus-s-blog/assets/style-f2d3db91.css">
+      <script type="module" crossorigin src="/daedalus-s-blog/assets/main-c11623d1.js"></script>
+      <link rel="stylesheet" href="/daedalus-s-blog/assets/main-153204d6.css">
     </head>
     <body>
         <header>
-            <a href="/daedalus-s-blog/" class="siteTitle">Daedalus&#x27;s Blog</a>
+            <a href="/daedalus-s-blog/" class="siteTitle" ariane-router>Daedalus&#x27;s Blog</a>
             <nav>                <ul role="list" style="--n-items:4; --current-item:0">
                         <li class="nav_item">
-                            <a href="/daedalus-s-blog/" class="nav_link current">
+                            <a href="/daedalus-s-blog/" ariane-router class="nav_link current">
                                 Articles
                             </a>
                         </li>
                         <li class="nav_item">
-                            <a href="/daedalus-s-blog/about/" class="nav_link ">
+                            <a href="/daedalus-s-blog/about/" ariane-router class="nav_link ">
                                 About
                             </a>
                         </li>
                         <li class="nav_item">
-                            <a href="/daedalus-s-blog/contact/" class="nav_link ">
+                            <a href="/daedalus-s-blog/contact/" ariane-router class="nav_link ">
                                 Contact
                             </a>
                         </li>
                         <li class="nav_item">
-                            <a href="/daedalus-s-blog/cv/" class="nav_link ">
+                            <a href="/daedalus-s-blog/cv/" ariane-router class="nav_link ">
                                 Cv
                             </a>
                         </li>
@@ -45,7 +45,7 @@
         <main class="page-articles"> 
 
         <article class="card">
-                <a href="/daedalus-s-blog/blog/1/" class="article-card">
+                <a href="/daedalus-s-blog/blog/1/" class="article-card" ariane-router>
                         <h3>
                             Life in Athens
                         </h3>
@@ -59,7 +59,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/daedalus-s-blog/blog/2/" class="article-card">
+                <a href="/daedalus-s-blog/blog/2/" class="article-card" ariane-router>
                         <h3>
                             The Progress of My Nephew, Talos
                         </h3>
@@ -73,7 +73,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/daedalus-s-blog/blog/3/" class="article-card">
+                <a href="/daedalus-s-blog/blog/3/" class="article-card" ariane-router>
                         <h3>
                             The Tragedy of Talos
                         </h3>
@@ -87,7 +87,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/daedalus-s-blog/blog/4/" class="article-card">
+                <a href="/daedalus-s-blog/blog/4/" class="article-card" ariane-router>
                         <h3>
                             Exile from Athens
                         </h3>
@@ -101,7 +101,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/daedalus-s-blog/blog/5/" class="article-card">
+                <a href="/daedalus-s-blog/blog/5/" class="article-card" ariane-router>
                         <h3>
                             A New Home in Crete
                         </h3>
@@ -115,7 +115,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/daedalus-s-blog/blog/6/" class="article-card">
+                <a href="/daedalus-s-blog/blog/6/" class="article-card" ariane-router>
                         <h3>
                             The Unforeseen Consequences
                         </h3>
@@ -129,7 +129,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/daedalus-s-blog/blog/7/" class="article-card">
+                <a href="/daedalus-s-blog/blog/7/" class="article-card" ariane-router>
                         <h3>
                             The Price of Hubris
                         </h3>
@@ -143,7 +143,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/daedalus-s-blog/blog/8/" class="article-card">
+                <a href="/daedalus-s-blog/blog/8/" class="article-card" ariane-router>
                         <h3>
                             A Strange Request
                         </h3>
@@ -157,7 +157,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/daedalus-s-blog/blog/9/" class="article-card">
+                <a href="/daedalus-s-blog/blog/9/" class="article-card" ariane-router>
                         <h3>
                             The Birth of the Minotaur
                         </h3>
@@ -171,7 +171,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/daedalus-s-blog/blog/10/" class="article-card">
+                <a href="/daedalus-s-blog/blog/10/" class="article-card" ariane-router>
                         <h3>
                             A Request from the King
                         </h3>
@@ -185,7 +185,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/daedalus-s-blog/blog/11/" class="article-card">
+                <a href="/daedalus-s-blog/blog/11/" class="article-card" ariane-router>
                         <h3>
                             The Tragic Loss of Androgeus
                         </h3>
@@ -199,7 +199,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/daedalus-s-blog/blog/12/" class="article-card">
+                <a href="/daedalus-s-blog/blog/12/" class="article-card" ariane-router>
                         <h3>
                             The Siege of Athens
                         </h3>
@@ -213,7 +213,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/daedalus-s-blog/blog/13/" class="article-card">
+                <a href="/daedalus-s-blog/blog/13/" class="article-card" ariane-router>
                         <h3>
                             The Tale of Theseus and Ariadne
                         </h3>
@@ -227,7 +227,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/daedalus-s-blog/blog/14/" class="article-card">
+                <a href="/daedalus-s-blog/blog/14/" class="article-card" ariane-router>
                         <h3>
                             The Fall of the Minotaur
                         </h3>
@@ -241,7 +241,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/daedalus-s-blog/blog/15/" class="article-card">
+                <a href="/daedalus-s-blog/blog/15/" class="article-card" ariane-router>
                         <h3>
                             Life in the Labyrinth
                         </h3>
@@ -255,7 +255,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/daedalus-s-blog/blog/16/" class="article-card">
+                <a href="/daedalus-s-blog/blog/16/" class="article-card" ariane-router>
                         <h3>
                             The Eve of Escape
                         </h3>
@@ -269,7 +269,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/daedalus-s-blog/blog/17/" class="article-card">
+                <a href="/daedalus-s-blog/blog/17/" class="article-card" ariane-router>
                         <h3>
                             The Accident
                         </h3>
@@ -283,7 +283,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/daedalus-s-blog/blog/18/" class="article-card">
+                <a href="/daedalus-s-blog/blog/18/" class="article-card" ariane-router>
                         <h3>
                             A New Life in Sicily
                         </h3>
@@ -297,7 +297,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/daedalus-s-blog/blog/19/" class="article-card">
+                <a href="/daedalus-s-blog/blog/19/" class="article-card" ariane-router>
                         <h3>
                             The Snail Shell Challenge
                         </h3>
@@ -311,7 +311,7 @@
                     </a>
             </article>
         <article class="card">
-                <a href="/daedalus-s-blog/blog/20/" class="article-card">
+                <a href="/daedalus-s-blog/blog/20/" class="article-card" ariane-router>
                         <h3>
                             The End of Minos
                         </h3>
