--- a/about/index.html
+++ b/about/index.html
@@ -12,30 +12,30 @@
         <meta
             name="keywords"
             content="Daedalus, Athens, minotaur, labyrinth, Theseus, Ariadne, inventor, sculptor, architect, Ancient Greece">
-      <script type="module" crossorigin src="/daedalus-s-blog/assets/style-fac82e35.js"></script>
-      <link rel="stylesheet" href="/daedalus-s-blog/assets/style-f2d3db91.css">
+      <script type="module" crossorigin src="/daedalus-s-blog/assets/main-c11623d1.js"></script>
+      <link rel="stylesheet" href="/daedalus-s-blog/assets/main-153204d6.css">
     </head>
     <body>
         <header>
-            <a href="/daedalus-s-blog/" class="siteTitle">Daedalus&#x27;s Blog</a>
+            <a href="/daedalus-s-blog/" class="siteTitle" ariane-router>Daedalus&#x27;s Blog</a>
             <nav>                <ul role="list" style="--n-items:4; --current-item:1">
                         <li class="nav_item">
-                            <a href="/daedalus-s-blog/" class="nav_link ">
+                            <a href="/daedalus-s-blog/" ariane-router class="nav_link ">
                                 Articles
                             </a>
                         </li>
                         <li class="nav_item">
-                            <a href="/daedalus-s-blog/about/" class="nav_link current">
+                            <a href="/daedalus-s-blog/about/" ariane-router class="nav_link current">
                                 About
                             </a>
                         </li>
                         <li class="nav_item">
-                            <a href="/daedalus-s-blog/contact/" class="nav_link ">
+                            <a href="/daedalus-s-blog/contact/" ariane-router class="nav_link ">
                                 Contact
                             </a>
                         </li>
                         <li class="nav_item">
-                            <a href="/daedalus-s-blog/cv/" class="nav_link ">
+                            <a href="/daedalus-s-blog/cv/" ariane-router class="nav_link ">
                                 Cv
                             </a>
                         </li>
