--- a/contact/index.html
+++ b/contact/index.html
@@ -12,30 +12,30 @@
         <meta
             name="keywords"
             content="Daedalus, Athens, minotaur, labyrinth, Theseus, Ariadne, inventor, sculptor, architect, Ancient Greece">
-      <script type="module" crossorigin src="/daedalus-s-blog/assets/style-fac82e35.js"></script>
-      <link rel="stylesheet" href="/daedalus-s-blog/assets/style-f2d3db91.css">
+      <script type="module" crossorigin src="/daedalus-s-blog/assets/main-c11623d1.js"></script>
+      <link rel="stylesheet" href="/daedalus-s-blog/assets/main-153204d6.css">
     </head>
     <body>
         <header>
-            <a href="/daedalus-s-blog/" class="siteTitle">Daedalus&#x27;s Blog</a>
+            <a href="/daedalus-s-blog/" class="siteTitle" ariane-router>Daedalus&#x27;s Blog</a>
             <nav>                <ul role="list" style="--n-items:4; --current-item:2">
                         <li class="nav_item">
-                            <a href="/daedalus-s-blog/" class="nav_link ">
+                            <a href="/daedalus-s-blog/" ariane-router class="nav_link ">
                                 Articles
                             </a>
                         </li>
                         <li class="nav_item">
-                            <a href="/daedalus-s-blog/about/" class="nav_link ">
+                            <a href="/daedalus-s-blog/about/" ariane-router class="nav_link ">
                                 About
                             </a>
                         </li>
                         <li class="nav_item">
-                            <a href="/daedalus-s-blog/contact/" class="nav_link current">
+                            <a href="/daedalus-s-blog/contact/" ariane-router class="nav_link current">
                                 Contact
                             </a>
                         </li>
                         <li class="nav_item">
-                            <a href="/daedalus-s-blog/cv/" class="nav_link ">
+                            <a href="/daedalus-s-blog/cv/" ariane-router class="nav_link ">
                                 Cv
                             </a>
                         </li>
@@ -46,7 +46,7 @@
     <h1>Contact</h1>
     <p>You can reach me through the following platforms:</p>
 <ul>
-<li>Email: <a href="mailto:&#x64;&#101;&#x64;&#x61;&#108;&#x65;&#64;&#x67;&#x6d;&#97;&#105;&#108;&#46;&#x63;&#111;&#x6d;">&#x64;&#101;&#x64;&#x61;&#108;&#x65;&#64;&#x67;&#x6d;&#97;&#105;&#108;&#46;&#x63;&#111;&#x6d;</a></li>
+<li>Email: <a href="mailto:&#x64;&#101;&#100;&#97;&#x6c;&#x65;&#x40;&#x67;&#109;&#x61;&#x69;&#108;&#x2e;&#99;&#x6f;&#109;">&#x64;&#101;&#100;&#97;&#x6c;&#x65;&#x40;&#x67;&#109;&#x61;&#x69;&#108;&#x2e;&#99;&#x6f;&#109;</a></li>
 <li>Twitter: @dedale</li>
 <li>Instagram: @dedale_inventions</li>
 <li>LinkedIn: linkedin.com/in/dedale</li>
