--- a/contact/index.html
+++ b/contact/index.html
@@ -13,7 +13,7 @@
             name="keywords"
             content="Daedalus, Athens, minotaur, labyrinth, Theseus, Ariadne, inventor, sculptor, architect, Ancient Greece">
       <script type="module" crossorigin src="/daedalus-s-blog/assets/main-c11623d1.js"></script>
-      <link rel="stylesheet" href="/daedalus-s-blog/assets/main-153204d6.css">
+      <link rel="stylesheet" href="/daedalus-s-blog/assets/main-68d52fd7.css">
     </head>
     <body>
         <header>
@@ -46,7 +46,7 @@
     <h1>Contact</h1>
     <p>You can reach me through the following platforms:</p>
 <ul>
-<li>Email: <a href="mailto:&#x64;&#101;&#100;&#97;&#x6c;&#x65;&#x40;&#x67;&#109;&#x61;&#x69;&#108;&#x2e;&#99;&#x6f;&#109;">&#x64;&#101;&#100;&#97;&#x6c;&#x65;&#x40;&#x67;&#109;&#x61;&#x69;&#108;&#x2e;&#99;&#x6f;&#109;</a></li>
+<li>Email: <a href="mailto:&#x64;&#x65;&#100;&#97;&#x6c;&#x65;&#64;&#103;&#x6d;&#97;&#x69;&#x6c;&#46;&#x63;&#x6f;&#109;">&#x64;&#x65;&#100;&#97;&#x6c;&#x65;&#64;&#103;&#x6d;&#97;&#x69;&#x6c;&#46;&#x63;&#x6f;&#109;</a></li>
 <li>Twitter: @dedale</li>
 <li>Instagram: @dedale_inventions</li>
 <li>LinkedIn: linkedin.com/in/dedale</li>
