--- a/about/index.html
+++ b/about/index.html
@@ -45,7 +45,7 @@
         <main class="page-about"> 
     <h1>About</h1>
     <p>Hello👋, my name is Dédale and I created this blog to document my adventures and thoughts. I am known for my skills as an inventor, sculptor, architect, and blacksmith. I have created numerous mechanical inventions and I am passionate about mechanisms and original creations.</p>
-<p>Recently, I discovered web development and I created a ViteJS plugin called <a href="https://www.npmjs.com/package/vite-plugin-dedale">vite-plugin-dedale</a>. This plugin offers a simple solution for generating static websites. I even used this plugin to develop this blog, which I hope you enjoy reading.</p>
+<p>Recently, I discovered web development and I created a ViteJS plugin called <a href="https://www.npmjs.com/package/vite-plugin-dedale">vite-plugin-dedale</a>. This plugin offers a simple solution for generating static websites. I even used this plugin, along with the <a href="https://www.npmjs.com/package/ariane-router">ariane-router</a> library, to develop this blog, which I hope you enjoy reading.</p>
 <p>In addition to my professional passions, I enjoy spending time with my family and friends, and I also appreciate nature and outdoor activities.</p>
 <p>I hope you enjoy reading my blog and please don&#39;t hesitate to contact me if you have any questions or comments.</p>
 
