--- a/contact/index.html
+++ b/contact/index.html
@@ -46,7 +46,7 @@
     <h1>Contact</h1>
     <p>You can reach me through the following platforms:</p>
 <ul>
-<li>Email: <a href="mailto:&#x64;&#x65;&#100;&#97;&#x6c;&#x65;&#64;&#103;&#x6d;&#97;&#x69;&#x6c;&#46;&#x63;&#x6f;&#109;">&#x64;&#x65;&#100;&#97;&#x6c;&#x65;&#64;&#103;&#x6d;&#97;&#x69;&#x6c;&#46;&#x63;&#x6f;&#109;</a></li>
+<li>Email: <a href="mailto:&#100;&#x65;&#100;&#97;&#x6c;&#101;&#64;&#103;&#109;&#97;&#x69;&#x6c;&#x2e;&#x63;&#111;&#109;">&#100;&#x65;&#100;&#97;&#x6c;&#101;&#64;&#103;&#109;&#97;&#x69;&#x6c;&#x2e;&#x63;&#111;&#109;</a></li>
 <li>Twitter: @dedale</li>
 <li>Instagram: @dedale_inventions</li>
 <li>LinkedIn: linkedin.com/in/dedale</li>
